--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "nodemon": "^2.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^4.5.2",
     "ts-loader": "^6.2.1",
     "typescript": "^4.3.5",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-node-externals": "^3.0.0"
   }
 }
