--- a/package.json
+++ b/package.json
@@ -6,25 +6,30 @@
   "scripts": {
     "build-dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
     "build-prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "dev": "cross-env NODE_ENV=development node ./bin/dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^2.0.12",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^16.13.0",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
-    "express": "^4.17.1",
-    "html-webpack-plugin": "^4.5.2",
+    "html-webpack-plugin": "^3.2.0",
+    "react-hot-loader": "^4.12.20",
     "ts-loader": "^6.2.1",
     "typescript": "^4.3.5",
-    "webpack": "^4.42.0",
+    "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.10.3",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
