--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@hot-loader/react-dom": "^16.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.12.20",
+    "style-loader": "^3.2.1",
     "ts-loader": "^6.2.1",
     "typescript": "^4.3.5",
     "webpack": "^4.41.6",
