--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^16.13.0",
+    "@types/jest": "^26.0.24",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.2.0",
+    "css-loader": "^3.6.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^27.0.6",
+    "less": "^4.1.1",
+    "less-loader": "^6.2.0",
     "react-hot-loader": "^4.12.20",
-    "style-loader": "^3.2.1",
+    "style-loader": "^2.0.0",
+    "ts-jest": "^27.0.4",
     "ts-loader": "^6.2.1",
     "typescript": "^4.3.5",
     "webpack": "^4.41.6",
