--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@hot-loader/react-dom": "^16.13.0",
     "@types/jest": "^26.0.24",
+    "@types/react": "^17.0.17",
+    "@types/react-dom": "^17.0.9",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^3.6.0",
@@ -32,6 +34,8 @@
     "ts-jest": "^27.0.4",
     "ts-loader": "^6.2.1",
     "typescript": "^4.3.5",
+    "unique-names-generator": "^4.6.0",
+    "url-loader": "^4.1.1",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
